# everest

./: .gitignore  .pre-commit-config.yaml  .pylintrc  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml  setup_macos.md
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: coverage.yml  mac-run-tests-build-docs.yml  run-tests-build-docs.yml  style.yml
ci/: testkomodo.sh
docs/everest/: conf.py  forward_model_jobs.rst
docs/source/: config.rst  config_generated.rst  index.rst  visualization.rst
docs/source/theory/: index.rst  optimization_algorithms.rst  optimization_theory.rst
everest/: suite.py
everest/detached/: __init__.py
everest/plugins/: hook_impl.py
everest/simulator/: simulator.py
examples/math_func/: config_minimal.yml
script/: install-macos-aio.sh  install-macos.sh  make-m1-intel-python-executable.sh
src/everest/: export.py
src/everest/config/: everest_config.py  simulator_config.py
src/everest/detached/: __init__.py
src/everest/queue_driver/: queue_driver.py
src/everest/simulator/: simulator.py
src/ieverest/: ieverest.py
tests/: conftest.py  test_api.py  test_config_validation.py  test_detached.py  test_egg_simulation.py  test_res_initialization.py  test_workflows.py  test_yaml_parser.py
tests/everest/: conftest.py  test_config_validation.py  test_detached.py  test_egg_simulation.py  test_everest_output.py  test_everlint.py  test_everserver.py  test_logging.py  test_multiobjective.py  test_res_initialization.py  test_yaml_parser.py
tests/everest/utils/: test_pydantic_doc_generation.py
tests/functional/: test_main_everest_entry.py
tests/test_data/snake_oil/everest/model/: snake_oil_torque.yml
tests/utils/: __init__.py
